--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-se for peru...
+<h1>Depois-Marisa Monte</h1>
+<br>
+<p>Depois de sonhar tantos anos<p>
+<p> De fazer tantos planos<p>
+<p>De um futuro pra nós<p>
+<p>Depois de tantos desenganos<p>
+<p>Nós nos abandonamos como tantos casais<p>
+<p>Quero que você seja feliz<p>
+<p>Hei de ser feliz também</p>
