--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<h1>Depois - Marisa Monte</h1>
-<br>
-<p>Depois de sonhar tantos anos<p>
-<p> De fazer tantos planos<p>
-<p>De um futuro pra nós<p>
-<br>
-<p>Depois de tantos desenganos<p>
-<p>Nós nos abandonamos como tantos casais<p>
-<p>Quero que você seja feliz<p>
-<p>Hei de ser feliz também</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+
+  </head>
+  <body>
+    <main>
+    </main>
+    <script src="sketch.js"></script>
+    <script src="p5.collide2d.js"></script>
+  </body>
+</html>
